--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/kasteleman/com.innr"
   },
-  "author": "",
+  "author": "Martin Brassé",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kasteleman/innr/issues"
