--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "category": [
     "lights"
   ],
-  "version": "1.0.1",
+  "version": "1.0.2",
   "compatibility": ">=1.5.3",
   "sdk": 2,
   "author": {
@@ -243,6 +243,51 @@
       "images": {
         "large": "/drivers/tunable_gu10/assets/images/large.png",
         "small": "/drivers/tunable_gu10/assets/images/small.png"
+      },
+      "settings": [
+        {
+          "id": "transtime",
+          "type": "number",
+          "label": {
+            "nl": "Transitie tijd in seconden",
+            "en": "Transition time in seconds"
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 20
+          }
+        }
+      ]
+    },
+    {
+      "id": "tunable_bulb",
+      "name": {
+        "en": "Tunable Bulb",
+        "nl": "Tunable Lamp"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_temperature"
+      ],
+      "zigbee": {
+        "manufacturerName": "innr",
+        "productId": [ "RB 178 T" ],
+        "deviceId": 544,
+        "profileId": 49246,
+        "learnmode": {
+          "image": "/drivers/tunable_bulb/assets/icon.svg",
+          "instruction": {
+            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the bulb by toggling it 6 times very quickly. It will flash twice to indicate it has been reset.",
+            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer hem dan te resetten door snel 6 keer de lamp aan en uit te zetten. De lamp zal twee keer knipperen om aan te geven dat hij is gereset."
+          }
+        }
+      },
+      "images": {
+        "large": "/drivers/tunable_bulb/assets/images/large.png",
+        "small": "/drivers/tunable_bulb/assets/images/small.png"
       },
       "settings": [
         {
