--- a/app.json
+++ b/app.json
@@ -306,6 +306,51 @@
       ]
     },
     {
+      "id": "tunable_e14",
+      "name": {
+        "en": "Tunable E14",
+        "nl": "Tunable E14"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_temperature"
+      ],
+      "zigbee": {
+        "manufacturerName": "innr",
+        "productId": [ "RB 148 T" ],
+        "deviceId": 544,
+        "profileId": 49246,
+        "learnmode": {
+          "image": "/drivers/tunable_e14/assets/icon.svg",
+          "instruction": {
+            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the bulb by toggling it 6 times very quickly. It will flash twice to indicate it has been reset.",
+            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer hem dan te resetten door snel 6 keer de lamp aan en uit te zetten. De lamp zal twee keer knipperen om aan te geven dat hij is gereset."
+          }
+        }
+      },
+      "images": {
+        "large": "/drivers/tunable_e14/assets/images/large.png",
+        "small": "/drivers/tunable_e14/assets/images/small.png"
+      },
+      "settings": [
+        {
+          "id": "transtime",
+          "type": "number",
+          "label": {
+            "nl": "Transitie tijd in seconden",
+            "en": "Transition time in seconds"
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 20
+          }
+        }
+      ]
+    },
+    {
       "id": "dimmable_puck",
       "name": {
         "en": "Dimmable PuckLight",
