possible fix for firmwarebug PL 110

--- a/app.json
+++ b/app.json
@@ -19,10 +19,9 @@
   },
   "contributing": {
     "donate": {
-      "paypal": {
-        "email": "kasteleman@gmail.com",
-        "currency": "EUR"
-      }
+        "paypal": {
+            "username": "paypal.me/kasteleman"
+        }
     }
   },
   "images": {
