--- a/app.json
+++ b/app.json
@@ -500,6 +500,11 @@
         "onoff",
         "dim"
       ],
+      "capabilitiesOptions": {
+        "onoff": {
+          "setOnDim": false
+        }
+      },
       "zigbee": {
         "manufacturerName": "innr",
         "productId": [ "UC 110", "FL 110", "ST 110" ],
