--- a/app.json
+++ b/app.json
@@ -10,13 +10,14 @@
   "category": [
     "lights"
   ],
-  "version": "1.0.7",
-  "compatibility": ">=1.5.3",
+  "version": "1.0.8",
+  "compatibility": ">=1.5.4",
   "sdk": 2,
   "author": {
     "name": "Kasteleman",
     "email": "kasteleman@gmail.com"
   },
+  "athomForumDiscussionId": 3882,
   "contributors": {
   "developers": [
       {
@@ -32,7 +33,7 @@
   "contributing": {
     "donate": {
         "paypal": {
-            "username": "paypal.me/kasteleman"
+            "username": "kasteleman"
         }
     }
   },
@@ -74,7 +75,7 @@
         "en": "Remote",
         "nl": "Remote"
       },
-      "class": "icon",
+      "class": "other",
       "capabilities": [
       ],
       "images": {
@@ -116,7 +117,58 @@
       },
       "zigbee": {
         "manufacturerName": "innr",
-        "productId": "RB 185 C",
+        "productId": ["RB 185 C", "BY 185 C"],
+        "deviceId": 528,
+        "profileId": 49246,
+        "learnmode": {
+          "instruction": {
+            "en": "Toggle the bulb to start pairing.\n\nIf pairing does not automatically start within 20 seconds, try resetting the device by toggling it 6 times with a 5 second interval. It will flash to indicate it has been reset.",
+            "nl": "Zet de lamp uit en weer aan.\n\nWordt de lamp niet automatisch toegevoegd binnen 20 seconden, probeer dan de lamp te resetten door hem 6 keer aan en uit te zetten met 5 seconden tussenpozen. De lamp zal knipperen om aan te geven dat hij is gereset."
+          }
+        }
+      },
+      "settings": [
+        {
+          "id": "transition_time",
+          "type": "number",
+          "label": {
+            "en": "Transition Time",
+            "nl": "Overgangstijd"
+          },
+          "hint": {
+            "en": "This setting determines the time in seconds it takes to dim from one level to another.",
+            "nl": "Deze instelling bepaalt de duur in seconden van het dimmen van een niveau naar een ander."
+          },
+          "value": 1,
+          "attr": {
+            "min": 0,
+            "max": 6553
+          }
+        }
+      ]
+    },
+    {
+      "id": "rgbw_strip",
+      "name": {
+        "en": "RGBW LEDSTRIP",
+        "nl": "RGBW LEDSTRIP"
+      },
+      "class": "light",
+      "capabilities": [
+        "onoff",
+        "dim",
+        "light_hue",
+        "light_saturation",
+        "light_temperature",
+        "light_mode"
+      ],
+      "images": {
+        "large": "drivers/rgbw_strip/assets/images/large.png",
+        "small": "drivers/rgbw_strip/assets/images/small.png"
+      },
+      "zigbee": {
+        "manufacturerName": "innr",
+        "productId": "FL 130 C",
         "deviceId": 528,
         "profileId": 49246,
         "learnmode": {
@@ -159,7 +211,7 @@
       ],
       "zigbee": {
         "manufacturerName": "innr",
-        "productId": [ "RB 162", "RB 165", "RB 175 W" ],
+        "productId": [ "RB 162", "RB 165", "RB 175 W", "BY 165" ],
         "deviceId": 256,
         "profileId": 49246,
         "learnmode": {
@@ -636,6 +688,76 @@
                  }
              ]
          }
+     ],
+     "actions": [
+       {
+         "id": "dim_custom_transition_time",
+         "title": {
+           "en": "Dim with transition",
+           "nl": "Dim met Overgang"
+         },
+         "args": [
+             {
+                 "name": "device",
+                 "type": "device",
+                 "filter": "driver_id=rgbw_bulb||rgbw_strip"
+             },
+             {
+            "name": "type_to_dim",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "0",
+                "label": {
+                  "en": "Helderheid",
+                  "nl": "Herlderheid"
+                }
+              },
+              {
+                "id": "1",
+                "label": {
+                  "en": "Saturation",
+                  "nl": "Saturation"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Temperatur",
+                  "nl": "Temperatuur"
+                }
+              }
+            ]
+          },
+           {
+             "name": "transition_value",
+             "type": "number",
+             "label": "Sec",
+             "min": 0,
+             "max": 3600,
+             "placeholder":
+             {
+               "en": "seconds",
+               "nl": "seconden"
+             }
+           },
+           {
+             "name": "dim_value",
+             "type": "range",
+             "min": 0,
+             "max": 1,
+             "step": 0.01,
+             "label": "%",
+             "labelMultiplier": 100,
+             "labelDecimals": 0,
+             "placeholder":
+             {
+               "en": "dim level",
+               "nl": "dimniveau"
+             }
+           }
+         ]
+       }
      ]
    }
 }
