Dim over Time with buildin flowcard

--- a/app.json
+++ b/app.json
@@ -301,6 +301,9 @@
         "dim": {
           "opts": {
             "duration": true
+          },
+          "onoff": {
+            "setOnDim": false
           }
         }
       },
