--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "category": [
     "lights"
   ],
-  "version": "1.0.8",
+  "version": "1.0.9",
   "compatibility": ">=1.5.4",
   "sdk": 2,
   "author": {
@@ -69,6 +69,52 @@
         }
       }
     },
+    {
+      "id": "smart_plug_sp120",
+      "name": {
+        "en": "SP120",
+        "nl": "SP120"
+      },
+      "class": "socket",
+      "capabilities": [
+        "onoff"
+      ],
+      "mobile": {
+        "components": [
+          {
+            "id": "icon",
+            "capabilities": [
+              "onoff"
+        ]
+      },
+      {
+        "id": "toggle",
+        "capabilities": [
+          "onoff"
+        ]
+      }
+      ]
+    },
+    "images": {
+      "large": "drivers/smart_plug_sp120/assets/images/large.png",
+      "small": "drivers/smart_plug_sp120/assets/images/small.png"
+    },
+    "zigbee": {
+      "manufacturerName": "innr",
+      "productId": "SP 120",
+      "deviceId": 16,
+      "profileId": 49246,
+      "learnmode": {
+        "image": "drivers/smart_plug_sp120/assets/learnmode.svg",
+        "instruction": {
+          "en": "Press and hold the button on the side for 5 seconds and release.",
+          "nl": "Druk de knop op de zijkant 5 seconden in en laat los."
+        }
+      }
+    },
+    "settings": [
+    ]
+  },
     {
       "id": "remote",
       "name": {
